fixed footer covering content

--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,12 @@ html{
     background-color: #333;
 }
 
+body {
+    min-height: 100px;
+    margin-bottom: 200px;
+    clear: both;
+ }
+
 .topnav {
     background-color: #333;
     overflow: hidden;
